--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,23 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  /* Light */
+  --color: rgb(5, 5, 5);
+  --background-color: rgb(250, 250, 250);
+
+  color: var(--color);
+  background-color: var(--background-color);
+}
+
+body.dark-mode {
+  --color: rgb(250, 250, 250);
+  --background-color: rgb(5, 5, 5);
+}
+
+header.dark-mode {
+  --color: rgb(250, 250, 250);
+  --background-color: rgb(5, 5, 5);
 }
 
 code {
@@ -21,6 +38,16 @@ code {
   border: none;
   width: 100%;
   cursor: pointer;
+}
+
+.toggleButton {
+  cursor: pointer;
+  border-radius: 10px;
+  display: inline-block;
+  padding: 10%;
+  font-size: 1rem;
+  border: 2px solid var(--color);
+  background-color: var(--background-color);
 }
 
 h1 {
